// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TickIcon Theme: jobStreet Default 1`] = `
<svg
  class="width__standardText height__standardText Box__root borderColor__standard"
  height="16"
  viewBox="90.471 302.809 823 823"
  width="16"
>
  <path
    d="M365.407 1022.185L90.677 747.457l67.883-67.882L365.406 886.42l479.977-479.988 67.883 67.882"
  />
</svg>
`;

exports[`TickIcon Theme: jobStreet Inline 1`] = `
<svg
  class="width__standardTextInline height__standardTextInline Icon__inline Box__root borderColor__standard"
  height="16"
  viewBox="90.471 302.809 823 823"
  width="16"
>
  <path
    d="M365.407 1022.185L90.677 747.457l67.883-67.882L365.406 886.42l479.977-479.988 67.883 67.882"
  />
</svg>
`;

exports[`TickIcon Theme: jobStreet Sized 1`] = `
<svg
  class="width__largeText height__largeText Box__root borderColor__standard"
  height="16"
  viewBox="90.471 302.809 823 823"
  width="16"
>
  <path
    d="M365.407 1022.185L90.677 747.457l67.883-67.882L365.406 886.42l479.977-479.988 67.883 67.882"
  />
</svg>
`;

exports[`TickIcon Theme: seekAnz Default 1`] = `
<svg
  class="width__standardText height__standardText Box__root borderColor__standard"
  height="16"
  viewBox="90.471 302.809 823 823"
  width="16"
>
  <path
    d="M365.407 1022.185L90.677 747.457l67.883-67.882L365.406 886.42l479.977-479.988 67.883 67.882"
  />
</svg>
`;

exports[`TickIcon Theme: seekAnz Inline 1`] = `
<svg
  class="width__standardTextInline height__standardTextInline Icon__inline Box__root borderColor__standard"
  height="16"
  viewBox="90.471 302.809 823 823"
  width="16"
>
  <path
    d="M365.407 1022.185L90.677 747.457l67.883-67.882L365.406 886.42l479.977-479.988 67.883 67.882"
  />
</svg>
`;

exports[`TickIcon Theme: seekAnz Sized 1`] = `
<svg
  class="width__largeText height__largeText Box__root borderColor__standard"
  height="16"
  viewBox="90.471 302.809 823 823"
  width="16"
>
  <path
    d="M365.407 1022.185L90.677 747.457l67.883-67.882L365.406 886.42l479.977-479.988 67.883 67.882"
  />
</svg>
`;

exports[`TickIcon Theme: seekAsia Default 1`] = `
<svg
  class="width__standardText height__standardText Box__root borderColor__standard"
  height="16"
  viewBox="90.471 302.809 823 823"
  width="16"
>
  <path
    d="M365.407 1022.185L90.677 747.457l67.883-67.882L365.406 886.42l479.977-479.988 67.883 67.882"
  />
</svg>
`;

exports[`TickIcon Theme: seekAsia Inline 1`] = `
<svg
  class="width__standardTextInline height__standardTextInline Icon__inline Box__root borderColor__standard"
  height="16"
  viewBox="90.471 302.809 823 823"
  width="16"
>
  <path
    d="M365.407 1022.185L90.677 747.457l67.883-67.882L365.406 886.42l479.977-479.988 67.883 67.882"
  />
</svg>
`;

exports[`TickIcon Theme: seekAsia Sized 1`] = `
<svg
  class="width__largeText height__largeText Box__root borderColor__standard"
  height="16"
  viewBox="90.471 302.809 823 823"
  width="16"
>
  <path
    d="M365.407 1022.185L90.677 747.457l67.883-67.882L365.406 886.42l479.977-479.988 67.883 67.882"
  />
</svg>
`;

exports[`TickIcon Theme: wireframe Default 1`] = `
<svg
  class="width__standardText height__standardText Box__root borderColor__standard"
  height="16"
  viewBox="90.471 302.809 823 823"
  width="16"
>
  <path
    d="M365.407 1022.185L90.677 747.457l67.883-67.882L365.406 886.42l479.977-479.988 67.883 67.882"
  />
</svg>
`;

exports[`TickIcon Theme: wireframe Inline 1`] = `
<svg
  class="width__standardTextInline height__standardTextInline Icon__inline Box__root borderColor__standard"
  height="16"
  viewBox="90.471 302.809 823 823"
  width="16"
>
  <path
    d="M365.407 1022.185L90.677 747.457l67.883-67.882L365.406 886.42l479.977-479.988 67.883 67.882"
  />
</svg>
`;

exports[`TickIcon Theme: wireframe Sized 1`] = `
<svg
  class="width__largeText height__largeText Box__root borderColor__standard"
  height="16"
  viewBox="90.471 302.809 823 823"
  width="16"
>
  <path
    d="M365.407 1022.185L90.677 747.457l67.883-67.882L365.406 886.42l479.977-479.988 67.883 67.882"
  />
</svg>
`;
